--- a/map.html
+++ b/map.html
@@ -21,7 +21,7 @@
 	    </div>
 	   </nav>
 	 </header>
-	    <h1>Google Maps</h1>
+	    <h1 id= "gmaps">Google Maps</h1>
 		<section>
 		<div id="wrapper">
 		<div id="map"></div>
