--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <h4>Hello my name is Jorge Martinez a first year in IIT. I current a ITM student at the College of Computing Department. I was born and raise in the windy city of Chicago. </h4>
         <h4> I Hope to see the world of IT/ITM and the possible Career opportunity afforded to me throught IIT. </h4>
         <img id ="IIT" src="images/iitgift_1025.jpg" alt="IllinoisInstituteofTechnology"> 
-		</section>
-		<section id= "schedule">
+	</section>
+	<section id= "schedule">
         <h2>Schedule</h2>
-		<div id= "class">
+      <div id= "class">
         <p> MATH 180-01 Fundamentals of Discrete Math - Stasi, Despina</p>
         <p> ITM 301-01 Intro OS and Hardware - Pappademetriou, Vasilios</p>
         <p> ITMD 361-01 Fund of Web Development - Krieglstein, Daniel</p>
         <p> ITMO 340-01 Intro Data Networks & Internet - McHugh, Louis</p>
         <p> ITM 311-01 Intro to Software Development - Speller, Barry</p>
-		<p> GLS 180-01 Intro to Software Development - Speller, Barry</p>
-		<div>
+	<p> GLS 180-01 Intro to Software Development - Speller, Barry</p>
+      </div>
     </section>
   </body>
 </html>
